--- a/Brink Theme/modThemeLight.css
+++ b/Brink Theme/modThemeLight.css
@@ -1,5 +1,5 @@
 /*------------------------------*\
-|* - -  Light Theme V1.4.0  - - *|
+|* - -  Light Theme V1.5.0  - - *|
 \* - - - - - - - - - - - - - - -*/
 
 /* User */
@@ -8,29 +8,17 @@
 	--bg: 0, 0%, 100%;
 	--bgAlt: 0, 0%, 92%;
 	--btn: 240, 3%, 91%;
-	--btnLight: 240, 3%, 87%;
+	--btnAlt: 240, 3%, 91%;
+	--btnLight: 0, 0%, 0%, 0%;
 	--btnAccent: 240, 70%, 87%;
 	--border: 240, 3%, 91%;
 	
-	--textBright: 0, 0%, 10%;
-	--textMid: 0, 0%, 22%;
-	--textDim: 0, 0%, 30%;
+	--text: 0, 0%, 10%;
 	--textProminent: 27, 94%, 80%;
 	--textLinkHov: 240, 50%, 80%;
-	--textIcon: 0, 0%, 26%;
 	
 	--goldRating: 27, 87%, 67%;
 	--silverRating: 0, 0%, 80%;
-}
-
-/* List Item Specific Colours */
-
-.list-item {
-	--bg: 240, 1.5%, 4.5%;
-	--textBright: 0, 0%, 100%;
-	--textDim: 0, 0%, 80%;
-	--textLinkHov: 240, 50%, 80%;
-	--textIcon: 0, 0%, 83%;
 }
 
 /* Internal */
@@ -75,12 +63,7 @@
 }
 
 .list-container:before {
-	filter:
-		sepia(1)
-		saturate(500)
-		hue-rotate(calc(60deg + (180deg * 0.785)))
-		opacity(.6)
-		invert(0.785);
+	filter: invert(0.785) opacity(0.35);
 }
 
 /* Buttons & Shadows */
@@ -90,7 +73,6 @@
 .list-table > tbody:first-of-type:after,
 body #fancybox-close,
 #advanced-options .advanced-options-button a {
-	background: hsl(var(--btn)) !important;
 	box-shadow: none;
 }
 
@@ -116,13 +98,19 @@ body #fancybox-close,
 
 /* List Items */
 
-.data.image {
-	background: hsl(var(--bg));
+.list-item {
+	--text: 0, 0%, 100%;
 }
 
-.content-status, .rewatching {
+.data.image {
+	background: hsl(240, 1.5%, 4.5%);
+}
+
+.content-status,
+.rewatching {
 	font-weight: bold;
-	text-shadow: 1px 0 1px #000,
+	text-shadow:
+		1px 0 1px #000,
 		0 0 2px #000;
 }
 
@@ -130,14 +118,13 @@ body #fancybox-close,
 	background: hsla(240, 1.5%, 4.5%, 50%);
 }
 
+.score-10::before,
+.score-10::after,
+.score-9::before,
+.score-9::after,
 .more-content {
-	color: hsl(var(--textMid));
-}
-
-/* Footer */
-
-#copyright {
-	color: hsla(var(--textDim), 80%);
+	--text: 0, 0%, 10%;
+	color: hsl(var(--text)) !important;
 }
 
 /* Overlays */
